--- a/src/styles/components/_result.scss
+++ b/src/styles/components/_result.scss
@@ -1,6 +1,7 @@
 @import '../variables';
 
 .result {
+  width: 100%;
   .choices {
     display: flex;
     align-items: center;
@@ -17,8 +18,8 @@
     gap: $spacing-md;
     .choice-button {
       position: relative;
-      width: 150px;
-      height: 150px;
+      width: 220px;
+      height: 220px;
       border-radius: 50%;
       border: none;
       cursor: pointer;
@@ -38,23 +39,23 @@
           animation: pulse 1.5s infinite ease-out;
         }
         &::before {
-          width: 180px;
-          height: 180px;
+          width: 250px;
+          height: 250px;
           top: -15px;
           left: -15px;
           animation-delay: 0s;
         }
         &::after {
-          width: 210px;
-          height: 210px;
+          width: 280px;
+          height: 280px;
           top: -30px;
           left: -30px;
           animation-delay: 0.3s;
         }
         .pulse-layer {
           position: absolute;
-          width: 240px;
-          height: 240px;
+          width: 310px;
+          height: 310px;
           top: -45px;
           left: -45px;
           border-radius: 50%;
@@ -69,8 +70,8 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 110px;
-        height: 110px;
+        width: 160px;
+        height: 160px;
         background: $white;
         border-radius: 50%;
         display: flex;
@@ -98,23 +99,23 @@
       font-weight: $font-bold;
       text-transform: uppercase;
       letter-spacing: 2px;
+      margin-bottom: $spacing-unit * 4;
     }
   }
-
   .result-text {
     text-align: center;
     h2 {
       color: $white;
       font-size: $text-3xl;
       font-weight: $font-bold;
-      margin-bottom: $spacing-lg;
+      margin-bottom: $spacing-unit * 2;
     }
     .play-again {
       background: $white;
       color: $dark;
       border: none;
-      border-radius: $radius-sm;
-      padding: $spacing-md $spacing-xl;
+      border-radius: $radius-md;
+      padding: $spacing-unit * 3 $spacing-unit * 15;
       font-size: $text-md;
       font-weight: $font-bold;
       text-transform: uppercase;
@@ -122,7 +123,7 @@
       cursor: pointer;
       transition: transform $transition-normal;
       &:hover {
-        color: $primary;
+        color: $red;
       }
     }
   }
@@ -142,19 +143,100 @@
 @media screen and (max-width: $sm-breakpoint) {
   .result {
     .choices {
-      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
       gap: $spacing-xl;
     }
-
     .choice {
-      order: 1;
+      order:1;
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: center;
+      gap: $spacing-md;
+      .choice-button {
+        width: 140px;
+        height: 140px;
+        &.winner {
+          &::before {
+            width: 180px;
+            height: 180px;
+          }
+          &::after {
+            width: 210px;
+            height: 210px;
+          }
+          .pulse-layer {
+            width: 240px;
+            height: 240px;
+          }
+        }
+        .inner {
+          width: 110px;
+          height: 110px;
+        }
+      }
+      h3 {
+        font-size: $text-md;
+      }
     }
-
     .result-text {
-      order: 2;
-
+      order:2;
       h2 {
-        font-size: $text-2xl;
+        font-size: $text-3xl;
+      }
+      .play-again {
+        padding: $spacing-unit * 3 $spacing-unit * 15;
+      }
+    }
+  }
+}
+@media screen and (max-width: $xs-breakpoint) {
+  .result {
+    .choices {
+      flex-wrap: nowrap;
+      flex-direction: column;
+      justify-content: center;
+      gap: $spacing-xl;
+    }
+    .choice {
+      order:1;
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: center;
+      gap: $spacing-md;
+      .choice-button {
+        width: 120px;
+        height: 120px;
+        &.winner {
+          &::before {
+            width: 150px;
+            height: 150px;
+          }
+          &::after {
+            width: 180px;
+            height: 180px;
+          }
+          .pulse-layer {
+            width: 210px;
+            height: 210px;
+          }
+        }
+        .inner {
+          width: 90px;
+          height: 90px;
+        }
+      }
+      h3 {
+        font-size: $text-sm;
+      }
+    }
+    .result-text {
+      order:2;
+      h2 {
+        font-size: $text-3xl;
+      }
+      .play-again {
+        padding: $spacing-unit * 3 $spacing-unit * 10;
       }
     }
   }
