feat: implement detailed animated
- Enhanced the popup component with a richly animated content.
- Used Framer Motion for smooth and continuous animation transitions.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,8 @@ $light: #f3f3f3;
 $white: #ffffff;
 $black: #000000;
 $red: #d73b56;
+$orange: #ffaa33;
+$pink: #f8c8dc;
 
 // Scissors Colors
 $scissors-primary: hsl(39, 89%, 49%);
