--- a/src/styles/components/_result.scss
+++ b/src/styles/components/_result.scss
@@ -240,16 +240,24 @@
         height: 140px;
         &.winner {
           &::before {
-            width: 180px;
-            height: 180px;
+            width: 150px;
+            height: 150px;
+            top: -7px;
+            left: -7px;
+            animation-delay: 0s;
           }
           &::after {
-            width: 210px;
-            height: 210px;
+            width: 170px;
+            height: 170px;
+            top: -15px;
+            left: -15px;
+            animation-delay: 0.3s;
           }
           .pulse-layer {
-            width: 240px;
-            height: 240px;
+            width: 200px;
+            height: 200px;
+            top: -30px;
+            left: -30px;
           }
         }
         .inner {
@@ -291,16 +299,24 @@
         height: 120px;
         &.winner {
           &::before {
-            width: 150px;
-            height: 150px;
+            width: 130px;
+            height: 130px;
+            top: -7px;
+            left: -7px;
+            animation-delay: 0s;
           }
           &::after {
-            width: 180px;
-            height: 180px;
+            width: 150px;
+            height: 150px;
+            top: -15px;
+            left: -15px;
+            animation-delay: 0.3s;
           }
           .pulse-layer {
-            width: 210px;
-            height: 210px;
+            width: 180px;
+            height: 180px;
+            top: -30px;
+            left: -30px;
           }
         }
         .inner {
