style: update and enhance result styling
- Refined and optimized the CSS structure for the result screen to ensure a more consistent and polished appearance.
- Applied general improvements to layout, spacing, and responsiveness while maintaining scalability for future design updates.

--- a/src/styles/components/_game-board.scss
+++ b/src/styles/components/_game-board.scss
@@ -39,11 +39,16 @@
   }
 }
 /* ---------- RESPONSIVE DESIGN ---------- */
+@media screen and (max-width: $md-breakpoint) {
+  .game-board {
+    margin: $spacing-unit * 10 auto;
+  }
+}  
 @media screen and (max-width: $sm-breakpoint) {
   .game-board {
     min-height: 300px;
     max-width: fit-content;
-    margin: $spacing-unit * 10 auto;
+    margin: $spacing-unit * 8 auto;
     .triangle {
       width: 200px;
       height: 178px;
