--- a/src/styles/components/_result.scss
+++ b/src/styles/components/_result.scss
@@ -140,6 +140,25 @@
 }
 
 /* ---------- RESPONSIVE DESIGN ---------- */
+@media screen and (max-width: $xl-breakpoint) {
+  .result {
+    .choice {
+      .choice-button {
+        &.winner {
+          &::before {
+            display: none;
+          }
+          &::after {
+            display: none;
+          }
+          .pulse-layer {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+}
 @media screen and (max-width: $lg-breakpoint) {
   .result {
     margin: $spacing-unit * 5 $spacing-unit * 12;
@@ -149,16 +168,13 @@
         height: 180px;
         &.winner {
           &::before {
-            width: 220px;
-            height: 220px;
+            display: none;
           }
           &::after {
-            width: 250px;
-            height: 250px;
+            display: none;
           }
           .pulse-layer {
-            width: 280px;
-            height: 280px;
+            display: none;
           }
         }
         .inner {
@@ -188,20 +204,6 @@
       .choice-button {
         width: 140px;
         height: 140px;
-        &.winner {
-          &::before {
-            width: 180px;
-            height: 180px;
-          }
-          &::after {
-            width: 210px;
-            height: 210px;
-          }
-          .pulse-layer {
-            width: 240px;
-            height: 240px;
-          }
-        }
         .inner {
           width: 110px;
           height: 110px;
@@ -225,9 +227,7 @@
 @media screen and (max-width: $sm-breakpoint) {
   .result {
     .choices {
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: $spacing-xl;
+      flex-direction: column;
     }
     .choice {
       order:1;
@@ -238,28 +238,6 @@
       .choice-button {
         width: 140px;
         height: 140px;
-        &.winner {
-          &::before {
-            width: 150px;
-            height: 150px;
-            top: -7px;
-            left: -7px;
-            animation-delay: 0s;
-          }
-          &::after {
-            width: 170px;
-            height: 170px;
-            top: -15px;
-            left: -15px;
-            animation-delay: 0.3s;
-          }
-          .pulse-layer {
-            width: 200px;
-            height: 200px;
-            top: -30px;
-            left: -30px;
-          }
-        }
         .inner {
           width: 110px;
           height: 110px;
@@ -297,28 +275,6 @@
       .choice-button {
         width: 120px;
         height: 120px;
-        &.winner {
-          &::before {
-            width: 130px;
-            height: 130px;
-            top: -7px;
-            left: -7px;
-            animation-delay: 0s;
-          }
-          &::after {
-            width: 150px;
-            height: 150px;
-            top: -15px;
-            left: -15px;
-            animation-delay: 0.3s;
-          }
-          .pulse-layer {
-            width: 180px;
-            height: 180px;
-            top: -30px;
-            left: -30px;
-          }
-        }
         .inner {
           width: 90px;
           height: 90px;
