--- a/src/styles/components/_result.scss
+++ b/src/styles/components/_result.scss
@@ -228,6 +228,7 @@
   .result {
     .choices {
       flex-direction: column;
+      gap: $spacing-md;
     }
     .choice {
       order:1;
@@ -236,11 +237,15 @@
       align-items: center;
       gap: $spacing-md;
       .choice-button {
-        width: 140px;
-        height: 140px;
+        width: 100px;
+        height: 100px;
         .inner {
-          width: 110px;
-          height: 110px;
+          width: 80px;
+          height: 80px;
+          img {
+            width: 40px;
+            height: 40px;
+          }
         }
       }
       h3 {
@@ -250,7 +255,7 @@
     .result-text {
       order:2;
       h2 {
-        font-size: $text-3xl;
+        font-size: $text-2xl;
       }
       .play-again {
         padding: $spacing-unit * 3 $spacing-unit * 15;
@@ -264,7 +269,7 @@
       flex-wrap: nowrap;
       flex-direction: column;
       justify-content: center;
-      gap: $spacing-xl;
+      gap: $spacing-md;
     }
     .choice {
       order:1;
@@ -273,11 +278,15 @@
       align-items: center;
       gap: $spacing-md;
       .choice-button {
-        width: 120px;
-        height: 120px;
+        width: 100px;
+        height: 100px;
         .inner {
-          width: 90px;
-          height: 90px;
+          width: 80px;
+          height: 80px;
+          img {
+            width: 40px;
+            height: 40px;
+          }
         }
       }
       h3 {
@@ -287,7 +296,7 @@
     .result-text {
       order:2;
       h2 {
-        font-size: $text-3xl;
+        font-size: $text-2xl;
       }
       .play-again {
         padding: $spacing-unit * 3 $spacing-unit * 10;
